crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_ansi_preserved.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: preserved
---
---
command: ls -la
exit_code: 0
---
<stdout>
[32mSuccess[0m
</stdout>
<stderr>
[31mWarning[0m
</stderr>
