crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_ansi_stripped.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: stripped
snapshot_kind: text
---
---
command: ls -la
exit_code: 0
---
<stdout>
Success
</stdout>
<stderr>
Warning
</stderr>
