crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_asymmetric_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&actual)"
---
---
command: asymmetric truncation test
exit_code: 0
total_stdout_lines: 20
temp_file: [TEMP_DIR]
truncated: true
---
<stdout lines="1-5">
asymmetric line 1
asymmetric line 2
asymmetric line 3
asymmetric line 4
asymmetric line 5
</stdout>
<truncated>...stdout truncated (13 lines not shown)...</truncated>
<stdout lines="19-20">
asymmetric line 19
asymmetric line 20
</stdout>

<truncated>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncated>
