crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_large_command.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: normalize_path(&preserved)
snapshot_kind: text
---
---
command: ls -la
exit_code: 0
total_stdout_chars: 104
total_stderr_chars: 104
temp_file: [TEMP_DIR]
truncated: true
---
<stdout chars="0-30">
ABCDEFGHIJKLMNOPQRSTUVWXYZABCD
</stdout>
<truncated>...stdout truncated (44 characters not shown)...</truncated>
<stdout chars="74-104">
WXYZABCDEFGHIJKLMNOPQRSTUVWXYZ
</stdout>

<stderr chars="0-30">
ABCDEFGHIJKLMNOPQRSTUVWXYZABCD
</stderr>
<truncated>...stderr truncated (44 characters not shown)...</truncated>
<stderr chars="74-104">
WXYZABCDEFGHIJKLMNOPQRSTUVWXYZ
</stderr>
<truncate>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncate>
