crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_large_content_with_temp_file.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&actual)"
---
---
command: large content generation
exit_code: 0
total_stdout_lines: 500
total_stderr_lines: 300
temp_file: [TEMP_DIR]
truncated: true
---
<stdout lines="1-5">
This is a very long stdout line number 1 with lots of content to make it exceed normal limits
This is a very long stdout line number 2 with lots of content to make it exceed normal limits
This is a very long stdout line number 3 with lots of content to make it exceed normal limits
This is a very long stdout line number 4 with lots of content to make it exceed normal limits
This is a very long stdout line number 5 with lots of content to make it exceed normal limits
</stdout>
<truncated>...stdout truncated (490 lines not shown)...</truncated>
<stdout lines="496-500">
This is a very long stdout line number 496 with lots of content to make it exceed normal limits
This is a very long stdout line number 497 with lots of content to make it exceed normal limits
This is a very long stdout line number 498 with lots of content to make it exceed normal limits
This is a very long stdout line number 499 with lots of content to make it exceed normal limits
This is a very long stdout line number 500 with lots of content to make it exceed normal limits
</stdout>

<stderr lines="1-5">
This is a very long stderr line number 1 with error details and stack traces
This is a very long stderr line number 2 with error details and stack traces
This is a very long stderr line number 3 with error details and stack traces
This is a very long stderr line number 4 with error details and stack traces
This is a very long stderr line number 5 with error details and stack traces
</stderr>
<truncated>...stderr truncated (290 lines not shown)...</truncated>
<stderr lines="296-300">
This is a very long stderr line number 296 with error details and stack traces
This is a very long stderr line number 297 with error details and stack traces
This is a very long stderr line number 298 with error details and stack traces
This is a very long stderr line number 299 with error details and stack traces
This is a very long stderr line number 300 with error details and stack traces
</stderr>

<truncated>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncated>
